<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/rounded_background"
    android:padding="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:fontFamily="@font/grape_nut_font"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/moods" />



</LinearLayout>



